2008-10-06  Zoltan Varga  <vargaz@gmail.com>

	* Activator.cs (CreateInstance): Don't return the return value of the
	ctor.Invoke (object, ...) overload since it is null, return 'newOb' instead.

Mon Oct 6 15:12:25 CEST 2008 Paolo Molaro <lupus@ximian.com>

	* Array.cs: better message when keys cannot be compared
	when sorting (bug #368455).

2008-09-29  Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs (MakeGenericType): Only use UnderlyingSystemType for user types.
	This must exclude TypeBuilder and EnumBuilder. Fixes #430508.

2008-09-28  Juraj Skripsky  <js@hotfeet.ch>

	* String.cs (ReplaceUnchecked): Avoid any unnecessary work and 
	string allocations by returning early when no oldValue was found.

2008-09-24  Marek Habersack  <mhabersack@novell.com>

	* Double.cs: check whether decimal_separator, group_separator and
	currency_symbol strings aren't empty before trying to index them
	in Parse ().

2008-09-24  Jb Evain  <jbevain@novell.com>

	* AppDomain.cs (CreateDomain): call the domain initializer in
	the newly created AppDomain. Fixes #429545.

2008-09-24  Jb Evain  <jbevain@novell.com>

	* AppDomain.cs: implement the CreateDomain overload which
	takes an AppDomain initializer. Fixes #429545.

2008-09-17  Robert Jordan  <robertj@gmx.net>

	* DelegateSerializationHolder.cs: Starting with .NET 2.0, delegates
	of non-public methods are allowed to be serialized. Fixes #425345.

2008-09-15  Andy Hume  <andyhume32@yahoo.co.uk>

	* DateTimeOffset.cs: DateTimeOffset currently has no
	deserialization constructor, thus deserialization
	fails ("SerializationException: The constructor to deserialize an
	object of type System.DateTimeOffset was not found.")

	Patch attached, implements GetObjectData and that constructor.
	Also includes tests, which include round-tripping to/from MSFT.

2008-09-14  Zoltan Varga  <vargaz@gmail.com>

	* ConsoleDriver.cs: Remove obsolete GetTtySize icall.

2008-09-09  Marek Safar  <marek.safar@gmail.com>
