@@ -1,3 +1,8 @@
+2008-10-07  Marek Habersack  <mhabersack@novell.com>
+
+	* MathTest.cs: added tests for rounding doubles with truncation in
+	the away from zero mode.
+
 2008-09-25  Marek Habersack  <mhabersack@novell.com>
 
 	* DoubleTest.cs: added a test for TryParse invoked with various
